src/BadLang/Tests/BadC.Tests/tests/passing/operators/Halt.basm
.dependency TestFramework

.data data data_raw BASM_DATA
{
	.cstr FailMsg assembly "Halt Failed"
}

.code code code_raw BadC
{
	void __main__() : export
	{
		halt;
		TestFramework::Assert::Fail(&data::FailMsg);
	}
}