src/BadLang/Tests/BadC.Tests/tests/failing/SymbolNotFoundException/AccessPrivateSectionElement.basm

.code Test code_raw BadC
{
	void LocalFunc()
	{
		return;
	}
}

.code code code_raw BadC
{
	void __main__() : export
	{
		Test::LocalFunc();
		halt;
	}
}